--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,30 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules/
+package-lock.json
 
-# testing
-/coverage
+# production build
+build/
+dist/
 
-# production
-/build
+# environment variables
+.env
+.env.*.local
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+
+# IDEs and editors
+.vscode/
+.idea/
+.DS_Store
+
+# testing
+coverage/
+*.lcov
+
+# misc
+*.log
+*.tsbuildinfo
